see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2006-08-XX  Release 7.8.3                                      ---
----------------------------------------------------------------------

* added archer geometry/view loading via command-line arg - Bob Parker
* mged tree command now supports -o/-i, matches docs - John Anderson
* improved beginning-of-line input processing in stl-g - John Anderson
* improved end-of-line input processing in dxf-g - John Anderson
* support for longer Fastgen object names in fast4-g - Sean Morrison
* improved 'ted' mged command text editor support - Sean Morrison
* support mged EDITOR environment override on Windows - Sean Morrison
* fixed mged crash on P binding when not in edit mode - Sean Morrison
* improved FreeBSD 64bit support, fixes AMD64 crash - Erik Greenwald
* allow unlimited light samples during ray tracing - Sean Morrison
* new script for computing BRL-CAD file line counts - Sean Morrison
* fixed mged extrude of empty sketch display crash - Sean Morrison
* re-enabled png-ipu, pix-ipu, ipustat, ipuscan - Sean Morrison
* updated archer splash screen - Bob Parker
* archer enhancements for displaying view parameters - Bob Parker
* improved mged grid zooming using pixel size - John Anderson
* fixed mged hang caused by extreme grid zooming bug - John Anderson
* ported jove to SGI Altix platform, fixed crash bug - Sean Morrison
* increase default mged scrollback to 10k lines - Sean Morrison
* improved support for Mac "delete" keys in mged - Sean Morrison
* mged vi-mode command edit history searching - James (swcto)
* bigger, better vi command line editing in mged - James (swcto)
* rt command script 'ae' no longer resets view scale - Sean Morrison
* fixed asc-nmg manual page usage examples - Sean Morrison


----------------------------------------------------------------------